--- a/interfaces/interfaces.csproj
+++ b/interfaces/interfaces.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="$(OrleansPackageVersion)" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\classes\classes.csproj" />
+  </ItemGroup>
+
 </Project>
