--- a/grains/grains.csproj
+++ b/grains/grains.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IBM.WatsonDeveloperCloud.Conversation.v1" Version="1.3.1" />
+    <PackageReference Include="IBM.WatsonDeveloperCloud.NaturalLanguageUnderstanding.v1" Version="1.3.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="$(OrleansPackageVersion)" />
   </ItemGroup>
